COR-1457 - most O(N) operations replaced by O(1) - (disabled decaf and sharpen again)